<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    >

    <item
        android:id="@+id/menu_search"
        android:title="@string/comics_search"
        android:icon="@android:drawable/ic_menu_search"
        yourapp:showAsAction="always|collapseActionView"
        yourapp:actionViewClass="android.support.v7.widget.SearchView"
        />

    <item
        android:id="@+id/search_cancel"
        android:title="@string/search_cancel"
        android:icon="@android:drawable/ic_delete"
        yourapp:showAsAction="always"
        android:onClick="onClickCancelSearch"
        />

    <item
        android:id="@+id/about_app"
        android:title="@string/app_about"
        android:icon="@android:drawable/ic_dialog_info"
        yourapp:showAsAction="ifRoom"
        android:onClick="onClickAboutApp"
        />

</menu>